оптимизация - перенесли все css блоки в папку libs,настроили сжатие img и html через дополнения gulp c копированием всех файлов в папку dist

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+    <!-- <link rel="stylesheet" href="css/fonts.css"> -->
+    <!-- <link rel="stylesheet" href="css/bootstrap-reboot.min.css"> -->
     <!-- слайдер Slick -->
     <!-- <link rel="stylesheet" href="css/slick.css"> -->
     <!-- слайдер Tiny -->
@@ -13,7 +13,7 @@
     <!-- Слайдер от Boostrap -->
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     <!-- Подключаем файл с готовыми анимациями https://animate.style/ -->
-    <link rel="stylesheet" href="css/animate.css">
+    <!-- <link rel="stylesheet" href="css/animate.css"> -->
     <link rel="stylesheet" href="css/style.min.css">
     <!-- <link rel="stylesheet" href="css/style.css"> -->
     <title>Project Pulse</title>
