оптимизация - перенесли все css блоки в папку libs,настроили сжатие img и html через дополнения gulp c копированием всех файлов в папку dist

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <!-- слайдер Slick -->
     <!-- <link rel="stylesheet" href="css/slick.css"> -->
     <!-- слайдер Tiny -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css"> -->
     <!-- Слайдер от Boostrap -->
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     <!-- Подключаем файл с готовыми анимациями https://animate.style/ -->
