оптимизация - перенесли все css блоки в папку libs,настроили сжатие img и html через дополнения gulp c копированием всех файлов в папку dist, максимально переделал онлайн скрипты в офлайн

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="icons/favicon/favicon.ico" type="image/x-icon">
     <!-- <link rel="stylesheet" href="css/fonts.css"> -->
     <!-- <link rel="stylesheet" href="css/bootstrap-reboot.min.css"> -->
     <!-- слайдер Slick -->
@@ -162,9 +163,9 @@
         <div class="container">
             <h2 class="title fadeIn wow" data-wow-duration="1.5s" data-wow-delay="0.2s">Каталог пульсометров</h2>
             <ul class="catalog__tabs flipInX wow" data-wow-duration="1.5s" data-wow-delay="0.2s">
-                <li class="catalog__tab catalog__tab_active"><div>Для <br>фитнеса</div></li> <!-- дивы для того что-бы текст не наклонялся вместе с блоком -->
-                <li class="catalog__tab"><div>для <br>бега</div></li>
-                <li class="catalog__tab"><div>для <br>триатлона</div></li>
+                <li class="catalog__tab catalog__tab_active"><div>Для &#32; <br>фитнеса</div></li> <!-- дивы для того что-бы текст не наклонялся вместе с блоком -->
+                <li class="catalog__tab"><div>для &#32;<br>бега</div></li>
+                <li class="catalog__tab"><div>для &#32;<br>триатлона</div></li>
             </ul>
             <div class="catalog__content catalog__content_active">
                 <div class="catalog-item flipInY wow" data-wow-duration="1.5s" data-wow-delay="0.2s">
